# sysdash

./: LICENSE  README.md  pyproject.toml
src/sysdash/: app.py  glyphs.py  metrics.py  sparkline.py  weather.py
src/sysdash/themes/: __init__.py
src/sysdash/widgets/: clock.py  coderain.py  metric_panel.py  process_panel.py  weather_panel.py
