[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sysdash"
version = "0.2.0"
description = "An ambient terminal dashboard - system metrics, a clock, and weather, designed to live in a spare terminal pane all day."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [
    { name = "Riley B" }
]
keywords = ["tui", "terminal", "dashboard", "system-monitor", "textual"]
classifiers = [
    "Environment :: Console",
    "Environment :: Console :: Curses",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Topic :: System :: Monitoring",
    "Topic :: Terminals",
]
dependencies = [
    "textual>=0.60.0",
    "psutil>=5.9.0",
]

[project.urls]
Homepage = "https://github.com/your-username/sysdash"
Repository = "https://github.com/your-username/sysdash"

[project.scripts]
sysdash = "sysdash.app:main"

[tool.hatch.build.targets.wheel]
packages = ["src/sysdash"]
